# Second-Guess

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
data/: .gitkeep
src/: main.py
src/agents/: confidence_estimator.py  context_analyzer.py  devils_advocate.py  judge.py  proposer.py
src/api/: decisions.py
src/models/: database.py  schemas.py
src/observability/: __init__.py  langfuse_client.py  tracing.py
src/services/: decision_service.py  workflow.py
tests/: test_confidence_estimator.py  test_context_analyzer.py  test_devils_advocate.py  test_docker_flow.py  test_judge.py  test_langfuse_integration.py  test_proposer_agent.py  test_versioning.py  test_workflow.py
