[tool.poetry]
name = "second-guess"
version = "0.1.0"
description = "Decision Quality Measurement System"
authors = ["Sinu"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
langchain = "^0.3.0"
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"
instructor = "^1.6.0"
openai = "^1.54.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
